# mpcqp_walking

./: CMakeLists.txt  README.md
include/mpcqp_walking/: abstract_variable.h  defines.h  integrator.h  linear_inverted_pendulum_model.h  model_preview_control.h  quintic_polynomial.h  state_machine.h  tools.h  walker.h
src/: abstract_variable.cpp  integrator.cpp  linear_inverted_pendulum_model.cpp  model_preview_control.cpp  quintic_plynomial.cpp  state_machine.cpp  tools.cpp  walker.cpp
tests/: CMakeLists.txt  mpc_test.cpp  mpc_test2.cpp
